# Prometheus

./: Cargo.toml  zxz.json
client/: package.json
client/src/: App.tsx
client/src/app/: layout.tsx  page.tsx  styles.module.scss
client/src/schemas/: template-schema.ts
client/src/types/: env.d.ts
new-client/: README.md
new-client/src/app/: layout.tsx  page.tsx  styles.module.scss
new-client/src/data/: form-data.json  form-data.ts
new-client/src/routes/: ProtectedRoute.tsx
new-client/src/schemas/: template-schema.ts
new-client/src/services/: api.ts
new-client/src/styles/: _global.scss
new-plan/server/: package.json
new-plan/server/src/: main.ts
server/: .gitignore  package.json  tsconfig.json
server/src/: main.ts
server/src/controllers/: TemplateController.ts
server/src/middlewares/: validate-schema.ts
server/src/repositories/: Repository.ts  TemplateRepository.ts
server/src/schemas/: template-schema.ts
server/src/services/: FileSystemService.ts  TemplateService.ts
server/src/types/: schema.d.ts
server/src/use-cases/: GenerateTemplateUseCase.ts
src/: main.rs
src/modules/: mod.rs
src/modules/answers/: mod.rs
src/modules/choices/: mod.rs
src/modules/prompt/: mod.rs
src/modules/questions/: mod.rs
src/modules/terminal/: mod.rs
src/templates/3_1_2_1_1_1/: package.json
src/templates/3_1_2_1_3_1/: LICENSE  README.md  package.json
src/templates/3_1_2_2_3_1/: README.md  package.json
src/templates/3_1_2_3_3_1/: next.config.js  package.json
src/templates/3_1_2_4_3_1/: README.md  package.json
(+127 files in other folders)
